# web-mon-jrc

./: LICENSE  README.md
.claude/: settings.local.json
.github/workflows/: tauri-build.yml
dev/app/: .eslintrc.cjs  .prettierrc.json  index.html  package.json  tsconfig.json  vite.config.ts
dev/app/src/: CanvasDemo.tsx  main.tsx  router-paths.ts  router.tsx
dev/app/src-tauri/: Cargo.toml  tauri.conf.json
dev/app/src-tauri/icons/: README.md
dev/app/src/canvas-renderer/: CanvasRenderer.tsx  index.ts
dev/app/src/canvas-renderer/contexts/: CanvasObjectContext.tsx  ClickEventContext.ts  RenderRequestContext.ts
dev/app/src/canvas-renderer/objects/: CanvasCircle.tsx  CanvasDotPattern.tsx  CanvasLine.tsx  CanvasObjectBase.tsx  CanvasObjectGroup.tsx  CanvasOrderDemoItem.tsx  CanvasQuadrilateral.tsx  CanvasRect.tsx  CanvasRoundedRect.tsx  CanvasText.tsx
dev/app/src/canvas-renderer/types/: FontInfo.ts
dev/app/src/canvas-renderer/utils/: TofuFontHook.ts  colorUtil.ts  fontLoader.ts
dev/app/src/components/: MonitorCanvas.tsx
dev/app/src/pages/canvas-demo/: CanvasDemoPage.tsx
dev/app/src/pages/error/: ErrorPage.tsx
dev/app/src/pages/index/: IndexPage.tsx
dev/app/src/pages/monitors/type313s/: Type313sPage.tsx  constants.ts
dev/app/src/pages/settings/: SettingsPage.tsx
dev/app/src/store/: hooks.ts  store.ts  types.ts
dev/app/src/store/monitors/: monitorsSlice.ts
dev/app/src/utils/: platform.ts  toWide.ts
dev/tools/: README.md  jis-bdf-to-unicode-bdf.ts  package.json  png-to-ts-icon.ts  tsconfig.json
(+115 files in other folders)
